# oop

./: .gitignore  CMakeLists.txt  File.json
src/: Battleship.cpp  Battleship.h  BattleshipCell.cpp  BattleshipCell.h  CMakeLists.txt  Field.cpp  Field.h  FieldCell.cpp  FieldCell.h  ShipManager.cpp  ShipManager.h  main.cpp
src/Exceptions/: BotException.cpp  BotException.h  ModifiedJsonException.cpp  ModifiedJsonException.h  NoneAvailableSkillsException.cpp  NoneAvailableSkillsException.h  OutOfBondsException.cpp  OutOfBondsException.h  ReaderException.cpp  ReaderException.h  ShipNearAnotherException.cpp  ShipNearAnotherException.h  UnableOpenFileException.cpp  UnableOpenFileException.h  UnknownCommandException.cpp  UnknownCommandException.h
src/FileWork/: Deserialization.cpp  Deserialization.h  FileWrapper.cpp  FileWrapper.h  Serialization.cpp  Serialization.h
src/Game/: Game.h  GameSaver.cpp  GameSaver.h  GameState.cpp  GameState.h  PvEGame.cpp  PvEGame.h
src/InfoHolders/: CoordsHolder.h  InfoHolder.h  SkillInfoHolder.cpp  SkillInfoHolder.h  SkillResultInfoHolder.cpp  SkillResultInfoHolder.h  commandHolder.cpp  commandHolder.h  commandReader.cpp  commandReader.h  coordHolder.cpp  coordHolder.h  coordReader.cpp  coordReader.h  directionHolder.cpp  directionHolder.h  directionReader.cpp  directionReader.h
src/Players/: Bot.cpp  Bot.h  Player.h  User.cpp  User.h
src/Utils/: Randomizer.cpp  Randomizer.h
src/skills/: Bombardment.cpp  Bombardment.h  BombardmentFactory.cpp  BombardmentFactory.h  DoubleDamage.cpp  DoubleDamage.h  DoubleDamageFactory.cpp  DoubleDamageFactory.h  Scaner.cpp  Scaner.h  ScanerFactory.cpp  ScanerFactory.h  Skill.h  SkillFactory.h  SkillManager.cpp  SkillManager.h  SkillPrinter.cpp  SkillPrinter.h  SkillVisitor.h
