cmake_minimum_required(VERSION 3.10)
set (CMAKE_CXX_STANDARD 20)
project(battleships_war)
add_executable(battleships_war
    src/main.cpp
    src/Battleship.cpp
    src/Battleship.h
    src/BattleshipCell.cpp
    src/BattleshipCell.h
    src/Field.cpp
    src/Field.h
    src/FieldCell.cpp
    src/FieldCell.h
    src/ShipManager.cpp
    src/ShipManager.h
    src/skills/Bombardment.cpp
    src/skills/Bombardment.h
    src/skills/BombardmentFactory.cpp
    src/skills/BombardmentFactory.h
    src/skills/DoubleDamage.cpp
    src/skills/DoubleDamage.h
    src/skills/DoubleDamageFactory.cpp
    src/skills/DoubleDamageFactory.h
    src/skills/Scaner.cpp
    src/skills/Scaner.h
    src/skills/ScanerFactory.cpp
    src/skills/ScanerFactory.h 
    src/skills/Skill.h
    src/skills/SkillFactory.h
    src/InfoHolders/InfoHolder.h
    src/InfoHolders/SkillInfoHolder.h
    src/InfoHolders/SkillInfoHolder.cpp
    src/InfoHolders/SkillResultInfoHolder.h
    src/InfoHolders/SkillResultInfoHolder.cpp
    src/skills/SkillManager.h
    src/skills/SkillManager.cpp
    src/Exceptions/NoneAvailableSkillsException.h
    src/Exceptions/NoneAvailableSkillsException.cpp
    src/Exceptions/OutOfBondsException.h
    src/Exceptions/OutOfBondsException.cpp
    src/Exceptions/ShipNearAnotherException.h
    src/Exceptions/ShipNearAnotherException.cpp)

